--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>liga-test-task</title>
+    <meta name="author" content="Marat Magomedov" />
+    <meta name="description" content="Тестовое задание для Лиги Цифровой Экономики" />
+    <title>Тестовое задание</title>
   </head>
   <body>
     <div id="app"></div>
